--- a/main.ipynb
+++ b/main.ipynb
@@ -13,6 +13,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "edd41156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_table(records):\n",
+    "    teams = list(records.keys())\n",
+    "    df = pd.DataFrame(records)\n",
+    "    df.index = teams\n",
+    "    for team in teams:\n",
+    "        for opponent in teams:\n",
+    "            if team != opponent:\n",
+    "                df.at[team, opponent] = stats[team][opponent]['W']\n",
+    "            else:\n",
+    "                df.at[team, opponent] = \"--\"\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "48adaf20",
    "metadata": {},
@@ -20,167 +40,9 @@
    "source": [
     "with open (\"stats.json\", \"r\") as f:\n",
     "    stats = json.load(f)\n",
-    "    \n",
-    "teams = list(stats.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2535c246",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BRO</th>\n",
-       "      <th>BSN</th>\n",
-       "      <th>CHC</th>\n",
-       "      <th>CIN</th>\n",
-       "      <th>NYG</th>\n",
-       "      <th>PHI</th>\n",
-       "      <th>PIT</th>\n",
-       "      <th>STL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>BRO</th>\n",
-       "      <td>--</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BSN</th>\n",
-       "      <td>12</td>\n",
-       "      <td>--</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>14</td>\n",
-       "      <td>12</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CHC</th>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>--</td>\n",
-       "      <td>12</td>\n",
-       "      <td>7</td>\n",
-       "      <td>16</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CIN</th>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>--</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NYG</th>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>15</td>\n",
-       "      <td>9</td>\n",
-       "      <td>--</td>\n",
-       "      <td>12</td>\n",
-       "      <td>15</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PHI</th>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>--</td>\n",
-       "      <td>13</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PIT</th>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "      <td>14</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>--</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>STL</th>\n",
-       "      <td>11</td>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14</td>\n",
-       "      <td>9</td>\n",
-       "      <td>14</td>\n",
-       "      <td>16</td>\n",
-       "      <td>--</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    BRO BSN CHC CIN NYG PHI PIT STL\n",
-       "BRO  --  10  15  15  14  14  15  11\n",
-       "BSN  12  --  13  13  13  14  12   9\n",
-       "CHC   7   9  --  12   7  16   8  10\n",
-       "CIN   7   9  10  --  13  13  13   8\n",
-       "NYG   8   9  15   9  --  12  15  13\n",
-       "PHI   8   8   6   9  10  --  13   8\n",
-       "PIT   7  10  14   9   7   9  --   6\n",
-       "STL  11  13  12  14   9  14  16  --"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(stats)\n",
-    "df.index = teams\n",
-    "for team in teams:\n",
-    "    for opponent in teams:\n",
-    "        if team != opponent:\n",
-    "            df.at[team, opponent] = stats[team][opponent]['W']\n",
-    "        else:\n",
-    "            df.at[team, opponent] = \"--\"\n",
-    "df.head(8)"
+    "\n",
+    "result = create_table(stats)\n",
+    "result.head(8)"
    ]
   }
  ],
